pages/services/beta-storage/0.4.0-beta/cli-references/dcos-storage-provider/dcos-storage-provider-list/index.md
---
layout: layout.pug
navigationTitle: dcos storage provider list
title: dcos storage provider list
menuWeight: 0
notes: Code generated by docgen.go, DO NOT EDIT
enterprise: true
origin: github.com/mesosphere/dcos-storage/cli/pkg/cmd/cmd_provider_list.go
---
## dcos storage provider list

List existing volume providers.

### Synopsis

Arguments:

    <providers> A space-separated list of providers. This argument is optional.
                If it is not provided all providers will be listed.

List existing volume providers.

```bash
dcos storage provider list [<providers>] [flags]
```

### Examples

1. Create two volume providers then list them:

```bash
$ cat <<EOF | dcos storage provider create
{
    "name": "ssds",
    "spec": {
        "plugin": "lvm",
        "node": "c67efa5d-34fa-4bc5-8b21-2a5e0bd52385-S2",
        "plugin-configuration": {
            "devices": ["xvdb", "xvdc"]
        },
        "labels": {"rotational": "false"}
    }
}
EOF

$ cat <<EOF | dcos storage provider create
{
    "name": "spinning-rust",
    "spec": {
        "plugin": "lvm",
        "node": "c67efa5d-34fa-4bc5-8b21-2a5e0bd52385-S1",
        "plugin-configuration": {
            "devices": ["xvde", "xvdf"]
        },
        "labels": {"rotational": "true"}
    }
}
EOF

$ dcos storage provider list
PLUGIN  NAME           NODE                                     STATE
lvm     ssds           c67efa5d-34fa-4bc5-8b21-2a5e0bd52385-S2  ONLINE
lvm     spinning-rust  c67efa5d-34fa-4bc5-8b21-2a5e0bd52385-S1  ONLINE

$ dcos storage provider list --json
{
    "providers": [
        {
            "name": "ssds",
            "spec": {
                "plugin": "lvm",
                "node": "c67efa5d-34fa-4bc5-8b21-2a5e0bd52385-S2",
                "plugin-configuration": {
                    "devices": [
                        "xvdb",
                        "xvdc"
                    ]
                },
                "labels": {
                    "rotational": "false"
                }
            },
            "status": {
                "state": "ONLINE",
                "nodes": [
                    "c67efa5d-34fa-4bc5-8b21-2a5e0bd52385-S2"
                ],
                "last-changed": "0001-01-01T00:00:00Z",
                "last-updated": "0001-01-01T00:00:00Z"
            }
        },
        {
            "name": "spinning-rust",
            "spec": {
                "plugin": "lvm",
                "node": "c67efa5d-34fa-4bc5-8b21-2a5e0bd52385-S1",
                "plugin-configuration": {
                    "devices": [
                        "xvde",
                        "xvdf"
                    ]
                },
                "labels": {
                    "rotational": "true"
                }
            },
            "status": {
                "state": "ONLINE",
                "nodes": [
                    "c67efa5d-34fa-4bc5-8b21-2a5e0bd52385-S1"
                ],
                "last-changed": "0001-01-01T00:00:00Z",
                "last-updated": "0001-01-01T00:00:00Z"
            }
        }
    ]
}

$ dcos storage provider list ssds --json
{
    "providers": [
        {
            "name": "ssds",
            "spec": {
                "plugin": "lvm",
                "node": "c67efa5d-34fa-4bc5-8b21-2a5e0bd52385-S2",
                "plugin-configuration": {
                    "devices": [
                        "xvdb",
                        "xvdc"
                    ]
                },
                "labels": {
                    "rotational": "false"
                }
            },
            "status": {
                "state": "ONLINE",
                "nodes": [
                    "c67efa5d-34fa-4bc5-8b21-2a5e0bd52385-S2"
                ],
                "last-changed": "0001-01-01T00:00:00Z",
                "last-updated": "0001-01-01T00:00:00Z"
            }
        }
    ]
}
```

### Options

```bash
  --all             Display removed providers.
  --json            Display the list of volume providers in json format.
  --node string     Only show local volume providers on node.
  --plugin string   Only show providers of the specified plugin.
```

### Options inherited from parent commands

```bash
  -h, --help               Help for this command.
  --timeout duration   Override the default request timeout. (default 55s)
```

### SEE ALSO

* [dcos storage provider](../)	 - Manage volume providers.

